Fixed problem where signature pads are stretched

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -421,8 +421,7 @@ box-shadow: none !important;
             }
             canvas {
                 background-color: #ffffff;
-                width: 100%;
-                height: 169px;
+                
             }
             .button {
                 background-color: transparent;
@@ -445,8 +444,7 @@ box-shadow: none !important;
             }
             canvas {
                 background-color: #ffffff;
-                width: 100%;
-                height: 169px;
+               
             }
             .button {
                 background-color: transparent;
@@ -618,10 +616,12 @@ box-shadow: none !important;
     .folioCancel { margin-top: 0px !important; }
         
         .small-logo {
-           position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
+            height: 30px;
+            width: auto;
+            margin: auto;
+            margin-top:5px;
+            margin-bottom:5px;
+            display: block;
         }
 $darl: #868f98;
 $O: #c3c8cd;
@@ -1059,8 +1059,7 @@ box-shadow: none !important;
             }
             canvas {
                 background-color: #ffffff;
-                width: 100%;
-                height: 20vw;
+               
             }
             .button {
                 background-color: transparent;
@@ -1084,8 +1083,7 @@ box-shadow: none !important;
             }
             canvas {
                 background-color: #ffffff;
-                width: 100%;
-                height: 169px;
+               
             }
             .button {
                 background-color: transparent;
@@ -1310,11 +1308,13 @@ box-shadow: none !important;
         }
     }
     
-        .small-logo {
-            position: absolute !important;
-            margin: auto !important;
-            bottom: 0 !important;
-            width: 30vw;
+          .small-logo {
+            height: 30px;
+            width: auto;
+            margin: auto;
+            margin-top:5px;
+            margin-bottom:5px;
+            display: block;
         }
 
 }
